--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
         width: 100%;
         height: 100vh;
       }
+      body { 
+        margin: 0;   /* Remove body margins */
+      }
     </style>
 </head>
 <body>
